# xp-display

./: README.md
XHSI_app/: pom.xml
XHSI_app/src/main/java/net/sourceforge/xhsi/: ProgressDialog.java  XHSI.java
XHSI_app/src/net/sourceforge/xhsi/: PreferencesDialog.java  XHSI.java  XHSIPreferences.java
XHSI_app/src/net/sourceforge/xhsi/flightdeck/: GraphicsConfig.java
XHSI_app/src/net/sourceforge/xhsi/flightdeck/mfd/: DebugInformation.java
XHSI_app/src/net/sourceforge/xhsi/flightdeck/nd/: AltitudeRangeArc.java  CompassRose.java  HeadingLabel.java  NDFramedElement.java
XHSI_app/src/net/sourceforge/xhsi/flightdeck/pfd/: ADI.java  ADI_A320.java  AOA.java  AltiTape.java  AltiTape_A320.java  FMA_A320.java  HSI_A320.java  ILS.java  MINS.java  PFDComponent.java  PFDFail.java  PFDFramedElement.java  PFDGraphicsConfig.java  SpeedTape.java  SpeedTape_A320.java  VSI.java  VSI_A320.java
XHSI_app/src/net/sourceforge/xhsi/model/: Aircraft.java  Avionics.java  SimCommand.java
XHSI_app/src/net/sourceforge/xhsi/util/: FramedElement.java
XHSI_plugin/: CMakeLists.txt  datarefs.c  datarefs.h  datarefs_all_plugins.c  datarefs_all_plugins.h  datarefs_cl30.h  datarefs_ff_a320.h  datarefs_jar_a320neo.h  datarefs_pa_a320.h  datarefs_pilotedge.h  datarefs_q400.c  datarefs_q400.h  datarefs_qpac.c  datarefs_qpac.h  datarefs_ufmc.h  datarefs_x737.h  datarefs_x_raas.h  datarefs_xdual.c  datarefs_xdual.h  datarefs_z737.h  globals.h  ids.h  packets.c  plugin.c  settings.c  xfmc.c  xfmc.h  xhsi_cdu.c  xhsi_cdu.h  xp11_cdu.c
(+27 files in other folders)
